# langchain-demo

./: CLAUDE.md  LangChain-ModelIO-output-parser.md  LangChain-ModelIO.md  LangChain-Prompt Template.md  LangChain.md  README.md  prompt_template_demo.py  pyproject.toml  quick_sort.py
.claude/: ralph-loop.local.md  settings.local.json
.superpowers/brainstorm/: ui-design.html
20260111/: hello.py
20260114/: .env  helloworld.ipynb  helloworld.py
20260207/: agent_demo.py  chat_parser.py  chat_prompt.py  rag_demo.py  vector_store.py
20260208/: chatModelDemo.py  embeddingDemo.py  model_demo.py  param_location1.py
20260209/: baidu_platform.py  bailian_ali.py  chat_demo.py  demo1.py  diaoyong_demo.py  message_type_demo.py  no_chat_demo.py  zhipuAI.py
20260210/: ainvoke_test.py  async_call.py  batch_msg.py  no_stream_response.py  prompt_template_demo.py  stream_response.py  sync_call.py
20260212/: FewShotChatMessagePromptTemplateDemo.py  FewShotPromptTemplateDemo.py  combPrompt.py  messagePlaceHolderDemo.py  store_history.py
20260213/: .env  exampleSelector.py
20260330/: .env  load_yaml_prompt.py  output_parser_chain.py  output_parser_csv_output_parser.py  output_parser_datetime_output_parser.py  output_parser_demo.py  output_parser_json_output_parser.py  output_parser_xml_output_parser.py  prompt.json  prompt.yaml
quantum-rag/: .env  README.md  init_vectordb.py
quantum-rag/backend/: config.py  main.py  requirements.txt
quantum-rag/backend/models/: __init__.py  (+1 more)
quantum-rag/data/: quantum_rag.db
quantum-rag/frontend/: index.html  package.json
(+20 files in other folders)
